Finished Q/A loading correct amounts and buttons to load or collapse working

--- a/src/components/questions/questions.scss
+++ b/src/components/questions/questions.scss
@@ -76,7 +76,6 @@ h2 {
   text-decoration: none;
   display: inline-block;
   font-size: 14px;
-  font-weight: bold;
   margin-right: 30px;
   margin-top: 15px;
   cursor: pointer;
@@ -93,7 +92,6 @@ h2 {
   text-decoration: none;
   display: inline-block;
   font-size: 14px;
-  font-weight: bold;
   margin-right: 30px;
   margin-top: 15px;
   cursor: pointer;
@@ -146,7 +144,6 @@ div + div {
   outline: none;
   color: #6e6e6e;
   font-size: 16px;
-  font-weight: bold;
   padding: 20px;
 }
 
